Unavailable pre-processor macro in non-Qt environments https://bugs.webkit.org/show_bug.cgi?id=82042

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2012-03-29
Reviewed by Simon Hausmann.

This patch removes the use of the macro QT_VERSION_CHECK() because, in
non-Qt environments, the pre-processors raises an error. Instead of
calling the macro to generate the version number, the version is
expressed directly.

* platform/graphics/texmap/TextureMapperGL.cpp:
(SharedGLData): remove pre-processor macro for Qt version check.

Canonical link: https://commits.webkit.org/99938@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112530 268f45cc-cd09-0410-ab3c-d52691b4dbfc